# johnson-dso

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  index.md  k8s-deployment.yaml  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: ci-cd.yml
.jit/: jit-plan.yml
app/: main.py
app/routes/: secure.py
app/services/: __init__.py  auth.py
k8s/: deployment.yaml
tests/: test_auth.py
